--- a/pg1.html
+++ b/pg1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <header>
-<title>Canvas Job</title>
+<title>A Single Output Tile</title>
 </header>
 <body>
 <canvas id="myCanvas" width="1250" height="600"></canvas>
@@ -66,17 +66,25 @@ function getActColor(linAddr){
 function sidePane(baseX, baseY, ramFmt){
 	var cnv = document.getElementById("myCanvas");
 	var ctx = cnv.getContext("2d");
-
-	ctx.beginPath();
+	var yOfs = 0;					// y-offset. Incremented for further sidepane additions. 
+	
 	ctx.font = "25px monospace";
-	ctx.fillStyle = "rgba(30, 30, 30, 0.7)";
-	ctx.fillText("DEPTH:  "+DEPTH, baseX, baseY);
-	ctx.fillText("OUTLEN: "+OUTLEN, baseX, baseY+25);
+	var addLine = function(text){
+		ctx.beginPath();
+		ctx.fillStyle = "rgba(30, 30, 30, 0.7)";
+		ctx.fillText(text, baseX, baseY+yOfs);
+		yOfs += 25;
+	}
+	addLine("RAM-DEPTH: "+DEPTH);
+	addLine("OUTLEN:    "+OUTLEN);
+	addLine("HALOLEN:   "+HALOCNT);
+	addLine("NUMFRAMES: "+Math.floor(DEPTH/OUTLEN));
 	if(ramFmt)
-		ctx.fillText("RAMNUM: "+RAMNUM, baseX, baseY+50);
+		addLine("RAMNUM:    "+RAMNUM);
 	else{
-		ctx.fillText("Showing Output", baseX, baseY+60);
-		ctx.fillText("Tile(s).", baseX, baseY+85);
+		yOfs += 10;
+		addLine("Showing Output");
+		addLine("Tile(s).");
 	}
 }
 
@@ -112,21 +120,23 @@ function ramMaker(baseX, baseY, ramShade){
 			var posInRow = (y*RAMNUM+x) % OUTLEN;
 			var posInCol = Math.floor((y*RAMNUM+x) / OUTLEN);
 			// Left Halo print
-			if(0)if(posInRow < HALOCNT || posInRow > OUTLEN-HALOCNT-1){
-				ofs = posInRow > OUTLEN-HALOCNT-1 ? 1 : 0;
-				ctx.beginPath();
-				ctx.arc(baseX+60*x+22, baseY+55*y+22, 20, (ofs+0.5) * Math.PI, (ofs+1.5) * Math.PI);
-				ctx.fillStyle = clr.incrSh(getActColor(y*RAMNUM+x), 3);
-				ctx.fill();
-			}
+			if(isVisible.lHalo)
+				if(posInRow < HALOCNT || posInRow > OUTLEN-HALOCNT-1){
+					ofs = posInRow > OUTLEN-HALOCNT-1 ? 1 : 0;
+					ctx.beginPath();
+					ctx.arc(baseX+60*x+22, baseY+55*y+22, 20, (ofs+0.5) * Math.PI, (ofs+1.5) * Math.PI);
+					ctx.fillStyle = clr.incrSh(getActColor(y*RAMNUM+x), 3);
+					ctx.fill();
+				}
 			// Top Halo print
-			if(0)if(posInCol%OUTLEN < HALOCNT || posInCol%OUTLEN > OUTLEN-HALOCNT-1){
-				ofs = posInCol%OUTLEN > OUTLEN-HALOCNT-1 ? 1 : 0;
-				ctx.beginPath();
-				ctx.arc(baseX+60*x+22, baseY+55*y+22, 20, (ofs+1) * Math.PI, (ofs+2) * Math.PI);
-				ctx.fillStyle = clr.incrSh(getActColor(y*RAMNUM+x), 3);
-				ctx.fill();
-			}
+			if(isVisible.tHalo)
+				if(posInCol%OUTLEN < HALOCNT || posInCol%OUTLEN > OUTLEN-HALOCNT-1){
+					ofs = posInCol%OUTLEN > OUTLEN-HALOCNT-1 ? 1 : 0;
+					ctx.beginPath();
+					ctx.arc(baseX+60*x+22, baseY+55*y+22, 20, (ofs+1) * Math.PI, (ofs+2) * Math.PI);
+					ctx.fillStyle = clr.incrSh(getActColor(y*RAMNUM+x), 3);
+					ctx.fill();
+				}
 			// print Index
 			if(0 && x==0){
 				ctx.beginPath();
@@ -158,13 +168,18 @@ function ramMaker(baseX, baseY, ramShade){
 
 
 
-var SARRDIM = 2, HALOCNT = 3; 
+var SARRDIM = 2, HALOCNT = 2; 
 var RAMNUM  = 7, DEPTH  = 7;
 var OUTLEN  = 7;
 
 var ramFmt = false;
+var isVisible = {
+	lHalo: false,
+	tHalo: false
+};
 
-titleSet(500, 30 , "A single Output Tile", 30);
+titleSet(1100, 30, "Page 1", 20);
+titleSet(480, 30 , "A Single Output Tile", 30);
 ramMaker(55, 60, ramFmt);
 //ramMaker(55+480, 40, ramFmt);
 sidePane(1000, 80, ramFmt);
